# jvector

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  README.md  UPGRADING.md  compare_benchmark_iterations.py  compare_benchmarks.py  package.json  pom.xml  rat-excludes.txt  regression2.csv  testrig  visualize_benchmarks.py
.github/: CODEOWNERS
.github/workflows/: checklist_comment_on_new_pr.yml  generate-changelog.yaml  generate-release-notes.yml  pr_checklist.md  run-bench.yml  run-compaction.yml  unit-tests.yaml
benchmarks-jmh/: README.md  pom.xml
benchmarks-jmh/src/main/resources/: log4j2.xml
devdocs/: memory_estimator.md
docs/: ParallelWriter_DirectWrite_Design.md  benchmarking.md  compaction.md  draft-hello.md  intro-tutorial.md
docs/legacy/: jvector-step-by-step.md
docs/release notes/: README.md
docs/release notes/4.0.0-RC.8/: 4.0.0-RC.8.md  BugFixes.md  FusedPQ.md  TestingEnhancements.md  pr588.bugfix.md  pr602.bugfix.md  pr608.enhancement.md  pr610.bugfix.md  pr612.testing.md  pr613.testing.md  pr617.docs.md
docs/release notes/4.0.0-RC.9/: 4.0.0-RC.9.md  617.docs.md  625.testing.md  631.testing.md  634.testing.md  636.testing.md  637.fix.md  641.testing.md  644.docs.md  645.testing.md  647.testing.md  653.testing.md  654.testing.md  655.performance.md  658.testing.md  659.feature.md  663.docs.md  667.testing.md  669.testing.md  670.testing.md  671.testing.md  688.testing.md  693.enhancement.md  pr685.feature.md
docs/release notes/4.1.0/: 668.performance.md  681.performance.md  686.fix.md  692.testing.md  695.performance.md  replace_with_pr.feature.md
docs/tutorials/: 1-intro-tutorial.md  2-disk-tutorial.md  3-larger-than-memory-tutorial.md  4-graph-construction-guide.md
internal-apis/: README.md  pom.xml
jvector-api/: README.md  pom.xml
jvector-api/src/main/java/: module-info.java
jvector-apis/: pom.xml
jvector-base/: pom.xml
jvector-examples/: README.md  pom.xml
jvector-examples/datasets/: datasets.md  sharing.md
jvector-examples/datasets/public/: example_datasets_config.yaml  jvector-public-datasets.yaml
jvector-examples/src/main/resources/: log4j2.xml  logback.xml  visualize_benchmarks.py
jvector-examples/yaml-configs/: ada002-100k-compaction.yml  ada002-100k.yml  autoDefault.yml  cap-6M.yml  cohere-10M.yml  colbert-1M.yml  dataset-metadata.yml  dataset_metadata.yml  datasets.yml  default.yml  dpr-10M.yml  dpr-1M.yml  dpr-gemma-1M.yml  esmc-600-1M.yml  gecko-100k.yml  glove-25-angular.yml  glove-50-angular.yml  nytimes-256-angular.yml  openai-v3-small-100k.yml  run-config.yml  run.yml  sift-128-euclidean.yml
jvector-examples/yaml-configs/dataset-catalogs/: datasets.md  local-catalog.yaml  protected-catalog_yaml.yaml  public-catalog.yaml  sharing.md
jvector-examples/yaml-configs/dataset-catalogs/.catalog-cache/: include-17fa030e8661804a1403d7f88f31e3a16b2f37800b735af6b8551bd1d02bfdcf.yaml.cache  (+1 more)
jvector-examples/yaml-configs/index-parameters/: autoDefault.yml  cap-10M.yml  cap-1M.yml  cap-6M.yml  cohere-10M.yml  cohere-english-v3-10M.yml  cohere-english-v3-1M.yml  colbert-1M.yml  default-cassandra.yml  default-compaction-comparison.yml  default-opensearch.yml  default.yml  dpr-gemma-10M.yml  dpr-gemma-1M.yml  esmc-600-1M.yml  esmc-600-6M.yml  gecko-100k.yml  glove-100-angular.yml  glove-200-angular.yml  glove-25-angular.yml  glove-50-angular.yml  lastfm-64-dot.yml  mpnet-1M.yml  nytimes-256-angular.yml  openai-v3-small-100k.yml  personahub-1M.yml  sift-128-euclidean-c5.yml  sift-128-euclidean.yml  tahoe-x1-1M.yml
jvector-multirelease/: pom.xml
jvector-native/: pom.xml
jvector-native/src/main/c/: README.md  assertHwyTargets.h  jvector_avx2.c  (+14 more)
jvector-native/src/main/native/: README.md  assert_hwy_targets.h  jextract_vector_simd.sh  jvector_avx3_dl_kernels.cpp  jvector_avx3_spr_kernels.cpp  jvector_cpu_features.h  jvector_simd.cpp  jvector_simd.h  jvector_simd_kernel_list.h  jvector_simd_kernels.cpp  jvector_simd_kernels.h  meson.build
jvector-tests/: pom.xml
jvector-twenty/: pom.xml
local_datasets/: catalog_entries.yaml
local_datasets/mydatasets/: entries.yaml  entries_example.yaml
logging/2026-02-18_02-34-17/: dataset_info.csv  experiments.csv  sys_info.json
siftsmall/: siftsmall_base.bvecs  siftsmall_query.bvecs
(+708 files in other folders)
